--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blaseball-morse",
   "version": "1.0.0",
-  "description": "For following blaseball in morse code",
+  "description": "For following blaseball in morse code.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,6 +25,8 @@
     "clean-webpack-plugin": "4.0.0-alpha.0",
     "compression-webpack-plugin": "8.0.1",
     "copy-webpack-plugin": "9.0.1",
+    "favicons": "6.2.2",
+    "favicons-webpack-plugin": "5.0.2",
     "html-webpack-plugin": "5.3.2",
     "webpack": "5.46.0",
     "webpack-cli": "4.7.2",
