--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "copy-webpack-plugin": "9.0.1",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "5.0.2",
+    "file-loader": "6.2.0",
     "html-webpack-plugin": "5.3.2",
     "webpack": "5.46.0",
     "webpack-cli": "4.7.2",
