Changed startup scripts to be more heroku friendly

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --mode:production",
     "build:dev": "webpack",
     "dev": "webpack serve --open --mode=development",
-    "start:express": "webpack --mode=production && node index.js"
+    "start:express": "webpack --mode:production && node index.js"
   },
   "repository": {
     "type": "git",
