--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "build": "webpack --mode:production",
+    "build": "webpack --mode=production",
     "build:dev": "webpack",
     "dev": "webpack serve --open --mode=development",
-    "start:express": "webpack --mode:production && node index.js"
+    "start:express": "webpack --mode=production && node index.js"
   },
   "repository": {
     "type": "git",
