--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,18 +65,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+      - uses: mr-smithers-excellent/docker-build-push@v5
+        name: Build & push Docker image
         with:
+          image: blaseball-buzz
+          tags: ${{ steps.tag.outputs.new_tag }}, latest
           registry: ghcr.io
+          dockerfile: Dockerfile
           username: ${{ github.actor }}
-          password: ${{ secrets.PUBLISH_TOKEN }}
-
-      - name: Build and push to registry
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: |
-            latest
-            ${{ steps.tag.outputs.new_tag }}
+          password: ${{ secrets.GITHUB_TOKEN }}
