--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     environment:
       PORT: 8080
-      EVENT_STREAM: https://api.sibr.dev/replay/v1/replay?from=2021-07-01T01:00:08.17Z
+      #EVENT_STREAM: https://api.sibr.dev/replay/v1/replay?from=2021-07-01T01:00:08.
+      EVENT_STREAM: https://cors-proxy.blaseball-reference.com/events/streamData
     ports:
       - "8080:8080"
