--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-brands-svg-icons": "5.15.3",
+    "@fortawesome/free-solid-svg-icons": "5.15.3",
+    "@polymer/paper-dialog": "3.0.1",
+    "@polymer/paper-slider": "3.0.1",
     "@vaadin/vaadin-button": "20.0.1",
     "express": "4.17.1",
     "express-static-gzip": "2.1.1",
