--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "author": "Zac Lovoy (@zwlovoy)",
   "license": "MIT",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-brands-svg-icons": "5.15.4",
