--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@polymer/paper-dialog": "3.0.1",
     "@polymer/paper-slider": "3.0.1",
-    "@spectrum-web-components/overlay": "0.11.14",
-    "@spectrum-web-components/tooltip": "0.8.16",
+    "@spectrum-web-components/overlay": "0.11.15",
+    "@spectrum-web-components/tooltip": "0.8.17",
     "@vaadin/vaadin-button": "21.0.1",
     "@vaadin/vaadin-text-field": "21.0.1",
     "express": "4.17.1",
     "express-static-gzip": "2.1.1",
     "helmet": "4.6.0",
     "howler": "2.2.3",
-    "lit": "2.0.0-rc.4",
+    "lit": "2.0.0",
     "morse-decoder": "3.0.1"
   },
   "devDependencies": {
