--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "webpack-cli": "4.9.1",
     "webpack-dev-server": "4.7.2"
   },
+  "resolutions": {
+    "colors": "1.4.0"
+  },
   "vaadin": {
     "disableUsageStatistics": true
   }
