--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
 
     steps:
       - name: Set up Docker Buildx
+        id: buildx
         uses: docker/setup-buildx-action@v2
 
       - uses: actions/checkout@v3
@@ -66,12 +67,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
 
-      - uses: mr-smithers-excellent/docker-build-push@v5
+      - uses: mr-smithers-excellent/docker-build-push@master
         name: Build & push Docker image
         with:
           image: blaseball-buzz
           tags: ${{ steps.tag.outputs.new_tag }}, latest
           registry: ghcr.io
           dockerfile: Dockerfile
+          # Build for all available platforms
+          platform: ${{ steps.buildx.outputs.platforms }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
