--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
           tags: ${{ steps.tag.outputs.new_tag }}, latest
           registry: ghcr.io
           dockerfile: Dockerfile
-          enableBuildKit: true,
+          enableBuildKit: true
           # Build for all available platforms
           platform: ${{ steps.buildx.outputs.platforms }}
           username: ${{ github.actor }}
