--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,7 @@ jobs:
           tags: ${{ steps.tag.outputs.new_tag }}, latest
           registry: ghcr.io
           dockerfile: Dockerfile
+          enableBuildKit: true
           platform: linux/amd64,linux/arm64
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
